<resources>
    <string name="app_name">RestoCodeRenation</string>

    <string name="addNewRestoHeader">Add A New Restaurant</string>

    <string name="resto_name">Enter Restaurant Name</string>
    <string name="resto_address">Enter Restaurant Address</string>
    <string name="resto_gen"> Enter Restaurant Genre </string>

    <string name="resto_zip">Enter Restaurant Postal</string>
    <string name="resto_notes">Description</string>
    <string name="resto_range">Restaurant Price Range</string>
    <string name="resto_city">Enter Restaurant City</string>

    <string name="resto_submit"> Submit </string>

    <string name="resto_des"> Enter a Description </string>

    <string name="welcome"> Welcome </string>
    <string name="about">About</string>
    <string name="dawson">Dawson</string>
    <string name="dawson_college">Dawson College</string>
    <string name="settings">Settings</string>
    <string name="courseid">420-518DW Mobile Software Development</string>
    <string name="authors">This app brought to you by:</string>

    <string name="main_add"> Add Resto </string>
    <string name="main_find">Find Restos</string>
    <string name="main_fav">Favourite Restos</string>
    <string name="main_tip">Tip Calulator</string>
    <string name="main_search">Near Restos</string>
    <string name="brooker">Jacob Brooker</string>
    <string name="renuchan">Renuchan Thambirajah</string>
    <string name="dimitri">Dimitri Spyropoulos</string>
    <string name="denys">Denys Pishchalov</string>
    <string name="kichev">Georgi Kichev</string>
    <string name="renblurb">REnuchan is the best debugger ever</string>
    <string name="brookerBlurb">Jacob Brooker is the team leader, our source of inspiration and hope</string>
    <string name="denblurb">Denys is the oldest computer science student in Dawson\'s history</string>
    <string name="dimitriblurb">A proud Greek who enjoys reading about soccer and playing fifa </string>
    <string name="kichevblurb">The misterious invisible team member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bill">Bill, $</string>
    <string name="tips">Tips, %</string>
    <string name="billTotal">Bill Total, $:</string>
    <string name="billPerPerson">Bill per Person, $:</string>
    <string name="radioTops">Select Tips Option</string>
    <string name="calculate">Calculate</string>
    <string name="error">Error</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="numberPer">Number of persons</string>
    <string name="tipsTotal">Tips total, $:</string>
    <string name="set">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="post">Postal Code</string>
    <string name="exitSettings">Exit Settings</string>
    <string name="exitDialogText">Are you sure you want to discard changes made?</string>

    <string name="wrongInput">Invalid input</string>
    <string name="search_resto"> Enter Search </string>
    <string name="resto_genre"> Enter Genre </string>
    <string name="name_resto"> Enter Name </string>

    <string name="restoLong"> Enter Longitude </string>
    <string name="restoLat"> Enter Latitude </string>

    <string name="wrongPRange"> Price Range is from 1-4 </string>
    <string name="wrongCoor"> Latitude is From -90 - 90, Longitude is From -180 - 180, </string>
    <string name="missingField"> Provide all info asked </string>
    <string name="generalError"> Error, unknown reason</string>

    <string name="addSucces"> Added A New Restaurant </string>

    <string name="restAdd">Add</string>
    <string name="restEdit">Edit </string>

    <string name="restSave">Save </string>


    <string name="addSuccess"> You added this Resto </string>

    <string name="badPR"> Price range can only be 1-4 $ </string>
    <string name="badAddress"> Address does not exist </string>

    <string name="btnAdd"> Add </string>
    <string name="btnEdit"> Edit </string>
    <string name="btnSave"> Save </string>
    <string name="btnFav"> Fav </string>
    <string name="btnDel"> Delete </string>

    <string name="saveHeader"> Are You Sure</string>
    <string name="saveDialogText">Are you sure you want to keep these changes?</string>
    <string name="listHeader">Here is your result</string>
    <string name="nothingFound">Nothing Found</string>
    <string name="wrongTele">Telephone # is invalid</string>
    <string name="resto_tele">Enter Telephone #</string>
    <string name="btnRev">Reviews</string>


    <string name="addNewReviewHeader">Write review</string>
    <string name="main_find_some">Find Resto From Somewhere</string>
    <string name="review_title">Review Title</string>
    <string name="review_text">Review Text</string>
    <string name="review_rating">0</string>
    <string name="rating">Enter rating (number between 1 and 5)</string>
    <string name="btnAddReview">ADD REVIEW</string>
    <string name="synch">Synch Back End</string>

    <string name="zamaTag">Found by Zamato</string>
    <string name="heroTag">Found by Heroku</string>

</resources>

