<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="assigment.dawson.restocoderenation.SettingsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/set"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/headSettings"
            android:gravity="center"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/numberText"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:text=""
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/userEdit"
            android:textSize="20sp"
            android:layout_weight="1"
            android:hint="me@gmail.com"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/passView"
            android:textSize="20sp"
            android:layout_weight="1" />


        <EditText
            android:text=""
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/passEdit"
            android:layout_weight="1"
            android:hint="mypass"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <TextView
            android:text="@string/fn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/fnView"
            android:textSize="20sp"
            android:layout_weight="1" />


        <EditText
            android:text=""
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fnEdit"
            android:layout_weight="1"
            android:hint="Jack"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/ln"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/lnView"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"
            />

        <EditText
            android:text=""
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/lnEdit"
            android:layout_weight="1"
            android:hint="Nicholson"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/post"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/pcView"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"
            />

        <EditText
            android:text=""
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/pcEdit"
            android:layout_weight="1"
            android:hint="J1K1H1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/saveButton"
            android:src="@drawable/save_button"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:onClick="saveUser"
            />
    </LinearLayout>


</LinearLayout>
