<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/search_resto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/searchHead"
            android:gravity="center"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/name_resto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/nameText"
            android:layout_weight="1" />


        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/nameRestoInput"
            android:layout_weight="1"
            android:outlineProvider="bounds"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:text="@string/resto_genre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/restoGenreText"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/restoGenreInput"
            android:layout_weight="1"
            android:outlineProvider="bounds"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/resto_city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/restoCityText"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/restoCityInput"
            android:layout_weight="1"
            android:outlineProvider="bounds"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchButton"
            android:src="@drawable/search_resto"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>